added FAQ, fixed AbsoluteFile not found